src/App.css
/* @import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap'); */

@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Montserrat&Old+Standard+TT&family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: Poppins;
}

p,
input {
  font-family: 'Old Standard TT';
  background-color: white;
}

.container {
  margin: 0 3em;
}

/* HOMEPAGE STYLES BELOW */

body * {
  color: black;
}

html {
  max-width: 100%;
  overflow-x: hidden;
}

button {
  font-size: 12pt;
  padding: 0.5em 1em;
  border: none;
  height: 50px;
  width: fit-content;
  transition: color 0.4s ease-out, background-color 0.4s ease-out,
    transform 0.4s ease-out, box-shadow 0.2s ease-out;
}

button {
  border-radius: 25px;
}

button,
input.submit {
  font-family: Poppins;
  font-weight: 600;
}

/* STYLES FOR LOGIN & REGISTER PAGES BELOW */

body#login,
body#register,
body#verify-email,
body#loading,
body#email-verified,
body#email-not-verified,
body#logged-in,
body#reset-password,
body#password-reset,
body#found {
  height: 100vh;
  width: 100vw;
}

body#login,
body#verify-email,
body#loading,
body#reset-password,
body#password-reset,
body#found {
  overflow: hidden;
}

body#login,
body#register,
body#verify-email,
body#loading,
body#reset-password,
body#password-reset,
body#found {
  display: flex;
  align-items: center;
  justify-content: center;
  background-image: linear-gradient(
    60deg,
    rgba(139, 55, 55, 0.8),
    rgba(248, 125, 18, 0.8)
  );
}

body#login .card,
body#register .card,
body#reset-password .card,
body#password-reset .card {
  background-color: white;
  border-radius: 10px;
  width: 70vw;
  overflow-y: auto;
  overflow-x: hidden;
  padding-top: 20px;
  padding-bottom: 30px;
  padding-left: 35px;
  padding-right: 43px;
}

/* body#login .card {
  height: 400px;
}

body#register .card {
  height: 600px;
}

body#password-reset .card {
  height: 350px;
} */

.card {
  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.338);
}

form {
  /* height: 150px; */
  width: 100%;
}

body#register form,
body#register form > div,
body#login form,
body#login form > div,
body#reset-password form > div,
body#reset-password form,
body#password-reset form,
body#password-reset form > div {
  display: flex;
  flex-direction: column;
}

body#register form,
body#login form,
body#reset-password form,
body#password-reset form {
  gap: 3em;
}

.field {
  position: relative;
  width: 95%;
}

.field > input {
  width: 100%;
}

.password-subfield {
  width: 110%;
  display: flex;
  flex-direction: row;
}

.password-section {
  gap: 1em;
  position: relative;
}

body#password-reset .password-subfield > input {
  width: 85%;
}

input:focus {
  outline: none;
}

select {
  margin-top: 10px;
}

.eye-icon {
  /* position: absolute; */
  transform: scale(0.5);
  /* top: -2.25px; */
  /* right: -30px; */
}

.eye-icon:hover {
  opacity: 0.5;
}

.eye-icon-box {
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-color: rgba(230, 230, 230, 0.5); */
  height: 23px;
  width: 45px;
  /* border: solid 1px rgba(0, 0, 0, 0.3); */
  /* transform: translateX(-1px); */
}

.name-section {
  /* display: flex; */
  flex-direction: row;
  gap: 2em;
}

input.submit,
button.submit {
  text-transform: uppercase;
  color: white;
  background-color: black;
  border-radius: 5px;
}

input.submit,
form button.submit {
  padding: 10px 0;
}

.form-err {
  background-color: rgba(rgba(156, 3, 3, 0.56));
  color: white;
  border-radius: 10px;
}

body#login,
body#register,
body#verify-email,
body#reset-password,
body#password-reset,
body#found,
body#email-verified,
body#logged-in {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

body#email-verified,
body#logged-in {
  background-image: linear-gradient(
    60deg,
    rgba(19, 20, 20, 0.8),
    rgb(1, 199, 249)
  );
}

body#email-not-verified {
  background-image: linear-gradient(
    60deg,
    rgba(8, 7, 7, 0.8),
    rgba(183, 39, 39, 0.8)
  );
}

#email-not-verified > .container > button {
  background-color: white;
}

body#verify-email,
body#email-verified,
body#email-not-verified,
body#logged-in {
  position: relative;
}

#verify-email > .cutout,
#email-verified > .cutout,
#email-not-verified > .container,
#logged-in > .cutout {
  margin: 0 auto;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  padding: 10px;
  width: 70%;
  transform: translate(-50%, -50%);
}

#verify-email > .cutout,
#loading > div,
#email-verified > .cutout,
#email-not-verified > .container > .cutout,
#logged-in > .cutout {
  font-size: 9vw;
  font-weight: bold;
}

#loading > div {
  color: white;
}

#verify-email > .cutout,
#email-verified > .cutout,
#email-not-verified > .container > .cutout,
#logged-in > .cutout {
  background-color: white;
  mix-blend-mode: screen;
}

/* Styles for intro page below */

p:not(form *),
h1 {
  margin: 20px;
}

/* Styles for profile below */

#profile .container {
  padding-top: 30px;
}

#profile .profile-pic {
  border-radius: 50%;
}

@media (min-width: 1024px) {
  body#login .card,
  body#register .card,
  body#reset-password .card,
  body#password-reset .card {
    width: 350px;
  }

  .field {
    width: 100%;
  }
}

